--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <body>
     <h1 id='add-members-trigger'>Add remaining Radiohead members</h1>
     <script src="index.js"></script>
+    <script src='data.json'></script>
 </body>
 </html>
