finished the assignment

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <h1 id='add-members-trigger'>Add remaining Radiohead members</h1>
+    <script type="data.json"></script>
     <script src="index.js"></script>
 </body>
 </html>
